Bug 1119030 - Make MOZ_CRASHes unique to prevent compiler folding. r=Waldo, a=sledru